app/styles/meetup.scss
// Core variables
@import "variables";

html, body {
  -webkit-tap-highlight-color: transparent;
}

.event-details {
  font-size: small;
  color: $gray-light;
  display: inline-block;
  border-right: 1px solid $gray-lighter;
  padding: 0 5px;

  &:last-of-type {
    border-right: none;
  }
}

.app-layout .page-header {
  margin: 0 0 5px;
  border-bottom: 1px solid #fff;
  padding-bottom: 5px;
}

.nav .active {
  color: #fff !important;
}

.events {
  .page-header {
    border-bottom: none;
  }
  .panel-body {
    padding: 5px 15px 0;
  }
}

.geosuggest {
  position: relative;
}

.geosuggest__suggests {
  position: absolute;
  top: 100%;
  left: 0;
  right: 0;
  max-height: 25em;
  padding: 0;
  margin-top: -1px;
  background: #fff;
  border: 1px solid $input-border-focus;
  border-top-width: 0;
  overflow-x: hidden;
  overflow-y: auto;
  list-style: none;
  z-index: 5;
  -webkit-transition: max-height 0.2s, border 0.2s;
  transition: max-height 0.2s, border 0.2s;
}
.geosuggest__suggests--hidden {
  max-height: 0;
  overflow: hidden;
  border-width: 0;
}

/**
 * A geosuggest item
 */
.geosuggest-item {
  padding: .5em .65em;
  cursor: pointer;
}
.geosuggest-item:hover,
.geosuggest-item:focus {
  background: #f5f5f5;
}
.geosuggest-item--active {
  background: #267dc0;
  color: #fff;
}
.geosuggest-item--active:hover,
.geosuggest-item--active:focus {
  background: #ccc;
}

